--- a/style.css
+++ b/style.css
@@ -40,28 +40,145 @@ html {
 
 body {
   height: 100vh;
-  background: url(./images/bg-hero-mobile.svg);
-  background-position: top center;
-  background-size: cover;
-  background-attachment: local;
-  background-repeat: no-repeat;
+}
+
+.page-container {
+  padding: 1.1rem;
 }
 
 /* HEADER */
 
 header {
   width: 100%;
+  background: url(./images/bg-hero-mobile.svg);
+  background-color: var(--Very-Pale-Cyan);
+  background-position: top center;
+  background-size: cover;
+  background-attachment: local;
+  background-repeat: no-repeat;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-bar {
+  margin: 0.5em 0;
+  margin-bottom: 2.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
+
+.box__logo {
+  width: 65%;
+}
+
+.logo {
+  width: 45%;
+}
+
+.logo__btn {
+  background: #fff;
+  width: 38%;
+  font-size: 0.8rem;
+  font-weight: 600;
+  border: none;
+  padding: 0.3em;
+  border-radius: 2rem;
+  box-shadow: 0 0 0.4rem #c6ccd2;
+}
+
+.header__tittle {
+  text-align: center;
+}
+
+.header__tittle-h2 {
   font-family: var(--Poppins);
+  font-size: 1.4em;
+  margin-top: 2em;
+}
+
+.header__tittle-paragraph {
+  font-family: var(--Open);
+  margin: 1.8em 0;
+}
+
+.header__tittle-btn {
+  padding: 0.8em 2.8em;
+  font-size: 0.8em;
+  font-weight: 700;
+  border: none;
+  border-radius: 2rem;
+  background: var(--Pink);
+  color: #fff;
+  margin-bottom: 3em;
+}
+
+.header__box {
+  margin: 1em 0;
 }
 
 /* MAIN */
 
-main {
+.content {
   font-family: var(--Open);
   font-size: 5rem;
 }
 
+.content__info {
+  text-align: center;
+}
+
+/* Card */
+
+.content__info-card {
+  height: 25rem;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 2.5em auto;
+  padding: 2em;
+  border-radius: 1.2rem;
+  box-shadow: 0 0 0.8rem #c6ccd276;
+}
+
+.pic {
+  width: 90%;
+}
+
+.card-tittle {
+  font-size: 1.15rem;
+  margin-top: 1.5em;
+}
+
+.card-info {
+  font-size: 0.8rem;
+  margin: 1.5em 0;
+  opacity: 0.45;
+}
+
+.register-btn {
+  height: auto;
+}
+
+.register-btn .card-tittle {
+  margin: auto;
+}
+
 /* FOOTER */
+
+.foot__main {
+  background: var(--Very-Dark-Cyan);
+}
+
+.foot__main-logo {
+  filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(14deg) brightness(105%)
+    contrast(101%);
+}
 
 /* Social */
 
