--- a/style.css
+++ b/style.css
@@ -268,34 +268,25 @@ header {
 }
 
 .social__btn {
-  margin: 0.3rem;
+  width: 2.5rem;
+  margin: 0.5rem;
   border: 0.14rem solid #c6ccd2;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0.5rem;
   border-radius: 100%;
   cursor: pointer;
+  color: #fff;
 }
 
 .social__btn-icon {
-  height: 1.2rem;
-  width: 1.2rem;
-  filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(14deg) brightness(105%)
-    contrast(101%);
-}
-
-.fab {
-  font-size: 1rem;
-  color: #fff;
+  font-size: 1.1rem;
 }
 
 .social__btn:hover {
   border-color: #ff93d7;
-}
-
-.social__btn-icon:hover {
-  filter: invert(71%) sepia(9%) saturate(2869%) hue-rotate(288deg)
-    brightness(106%) contrast(101%);
+  color: #ff93d7;
 }
 
 .copyright-box {
@@ -362,6 +353,10 @@ header {
 }
 
 @media screen and (min-width: 1024px) {
+  header {
+    background-image: url("./images/bg-hero-desktop.svg");
+  }
+
   .register-btn {
     width: 60%;
   }
